# small-projects-collection

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Makefile  Pipfile  README.md  docker-compose.yml  requirements-dev.txt  requirements.txt
ADT/: linked_list.cpp  list.cpp
c-algorithms/: CMakeLists.txt
c-algorithms/conversions/: CMakeLists.txt  binary_to_decimal.c  decimal_to_binary.c
c-algorithms/miscellaneous/: CMakeLists.txt  factorial.c  fibonnacci.c  palindrome.c  prime.c  transcription.c
c-algorithms/numerical/: CMakeLists.txt
c-projects/: .devcontainer.json  CMakeLists.txt
c-projects/conversions/: binary_to_decimal.c  decimal_to_binary.c
c-projects/machine_learning/: CMakeLists.txt  k_means_clustering.c
c-projects/miscellaneous/: CMakeLists.txt  factorial.c  fibonnacci.c  transcription.c
c-projects/numerical/: CMakeLists.txt  mean.c  median.c  stat.c
cpp-projects/: .devcontainer.json  CMakeLists.txt
cpp-projects/data-structures/: CMakeLists.txt
cpp-projects/data-structures/array-list/: CMakeLists.txt  array_list.cpp  array_list.hpp  main.cpp
cpp-projects/data-structures/linked-list/: CMakeLists.txt  linked_list.cpp  linked_list.hpp  main.cpp
go-projects/: .devcontainer.json
go-projects/miscellaneous/: longest-palindromic-subsequence.go  password_generator.go
miscellaneous/: complementary.py  palindrome.py
network/: ip_location_lookup.c
python-algorithms/miscellaneous/: palindrome.py
python-algorithms/sort/: bubble_sort.py
python-projects/: .devcontainer.json  requirements.txt
python-projects/miscellaneous/: palindrome.py
python-projects/numerical/: find_root.py  lu_decomposition.py
python-projects/sort/: heap_sort.py  quick_sort.py
r-algorithms/sorting/: quick_sort.R
r-projects/: .devcontainer.json
r-projects/sorting/: bubble_sort.R  insertion_sort.R
temp/ADT/: dynamic_array.cpp
temp/miscellaneous/: clean.sh  translation.py  validate.py
temp/network/: bandwidth_monitor.c
